@@ -444,6 +444,13 @@ protected:
         m_nResizeBlock = block;
     }
 
+    void EnableSaveRestore(LPCTSTR pszSection, bool bRectOnly = FALSE)
+    {
+        // call the base method with the bHorzResize and bVertResize parameters
+        // figured out from the resize block flags.
+        BaseType::EnableSaveRestore(pszSection, bRectOnly, (m_nResizeBlock&DIALOG_BLOCKHORIZONTAL) == 0, (m_nResizeBlock&DIALOG_BLOCKVERTICAL) == 0);
+    };
+
 protected:
     MARGINS         m_margins;
     AeroControlBase m_aeroControls;
@@ -527,16 +534,21 @@ private:
     CString m_sSection;         // section name (identifies a parent window)
 
 protected:
-    // section to use in app's profile
-    void EnableSaveRestore(LPCTSTR pszSection, bool bRectOnly = FALSE)
+    // overloaded method, but since this dialog class is for non-resizable dialogs,
+    // the bHorzResize and bVertResize params are ignored and passed as false
+    // to the base method.
+    void EnableSaveRestore(LPCTSTR pszSection, bool bRectOnly = FALSE, BOOL bHorzResize = TRUE, BOOL bVertResize = TRUE)
     {
+        UNREFERENCED_PARAMETER(bHorzResize);
+        UNREFERENCED_PARAMETER(bVertResize);
+
         m_sSection = pszSection;
 
         m_bEnableSaveRestore = true;
         m_bRectOnly = bRectOnly;
 
         // restore immediately
-        LoadWindowRect(pszSection, bRectOnly);
+        LoadWindowRect(pszSection, bRectOnly, false, false);
     };
 
     virtual CWnd* GetResizableWnd() const
